force-app/main/default/objects/Event__x/Event__x.object-meta.xml
<CustomObject>
    <description>Event</description>
    <externalDataSource>NDR_Privacy_Center_Archive</externalDataSource>
    <externalName>event</externalName>
    <label>Event</label>
    <pluralLabel>Event</pluralLabel>
</CustomObject>