force-app/main/default/objects/Event__x/fields/Activity_Recurrence_Exception_ID__c.field-meta.xml
<CustomField>
    <fullName>Activity_Recurrence_Exception_ID__c</fullName>
    <externalDeveloperName>activityrecurrence2exceptionid</externalDeveloperName>
    <label>Activity Recurrence Exception ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>