force-app/main/default/objects/Event__x/fields/All_Day_Event__c.field-meta.xml
<CustomField>
    <fullName>All_Day_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>isalldayevent</externalDeveloperName>
    <label>All-Day Event</label>
    <type>Checkbox</type>
</CustomField>