force-app/main/default/objects/Event__x/fields/Assigned_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_ID__c</fullName>
    <externalDeveloperName>ownerid</externalDeveloperName>
    <label>Assigned To ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>