force-app/main/default/objects/Event__x/fields/Create_Recurring_Series_of_Events__c.field-meta.xml
<CustomField>
    <fullName>Create_Recurring_Series_of_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>isrecurrence</externalDeveloperName>
    <label>Create Recurring Series of Events</label>
    <type>Checkbox</type>
</CustomField>