force-app/main/default/objects/Event__x/fields/DB_Days__c.field-meta.xml
<CustomField>
    <fullName>DB_Days__c</fullName>
    <externalDeveloperName>c_00_nd200000_gcy_h_p</externalDeveloperName>
    <label>DB Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>