force-app/main/default/objects/Event__x/fields/Due_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Time__c</fullName>
    <externalDeveloperName>activitydatetime</externalDeveloperName>
    <label>Due Date Time</label>
    <type>DateTime</type>
</CustomField>