force-app/main/default/objects/Event__x/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <externalDeveloperName>enddate</externalDeveloperName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>