force-app/main/default/objects/Event__x/fields/Event_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Event_Subtype__c</fullName>
    <externalDeveloperName>eventsubtype</externalDeveloperName>
    <label>Event Subtype</label>
    <length>40</length>
    <type>Text</type>
</CustomField>