force-app/main/default/objects/Event__x/fields/external_id__c.field-meta.xml
<CustomField>
    <fullName>external_id__c</fullName>
    <externalDeveloperName>c_00_nd200000_gcy_hj</externalDeveloperName>
    <label>External id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>