force-app/main/default/objects/Event__x/fields/Group_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Event_Type__c</fullName>
    <externalDeveloperName>groupeventtype</externalDeveloperName>
    <label>Group Event Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>