force-app/main/default/objects/Event__x/fields/Historical_Event_Not_Following_Recurr__c.field-meta.xml
<CustomField>
    <fullName>Historical_Event_Not_Following_Recurr__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>isrecurrence2exclusion</externalDeveloperName>
    <label>Historical Event, Not Following Recurren</label>
    <type>Checkbox</type>
</CustomField>