force-app/main/default/objects/Event__x/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <externalDeveloperName>id</externalDeveloperName>
    <label>Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>