force-app/main/default/objects/Event__x/fields/Is_Child__c.field-meta.xml
<CustomField>
    <fullName>Is_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>ischild</externalDeveloperName>
    <label>Is Child</label>
    <type>Checkbox</type>
</CustomField>