force-app/main/default/objects/Event__x/fields/Is_Exception__c.field-meta.xml
<CustomField>
    <fullName>Is_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>isrecurrence2exception</externalDeveloperName>
    <label>Is Exception</label>
    <type>Checkbox</type>
</CustomField>