force-app/main/default/objects/Event__x/fields/Is_Group_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_Group_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>isgroupevent</externalDeveloperName>
    <label>Is Group Event</label>
    <type>Checkbox</type>
</CustomField>