force-app/main/default/objects/Event__x/fields/Last_Modified_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_ID__c</fullName>
    <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
    <label>Last Modified By ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>