force-app/main/default/objects/Event__x/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <externalDeveloperName>location</externalDeveloperName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>