force-app/main/default/objects/Event__x/fields/Name_ID__c.field-meta.xml
<CustomField>
    <fullName>Name_ID__c</fullName>
    <externalDeveloperName>whoid</externalDeveloperName>
    <label>Name ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>