force-app/main/default/objects/Event__x/fields/Pattern_Version__c.field-meta.xml
<CustomField>
    <fullName>Pattern_Version__c</fullName>
    <externalDeveloperName>recurrence2patternversion</externalDeveloperName>
    <label>Pattern Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>