force-app/main/default/objects/Event__x/fields/Recurrence_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Activity_ID__c</fullName>
    <externalDeveloperName>recurrenceactivityid</externalDeveloperName>
    <label>Recurrence Activity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>