force-app/main/default/objects/Event__x/fields/Recurrence_Day_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Day_of_Month__c</fullName>
    <externalDeveloperName>recurrencedayofmonth</externalDeveloperName>
    <label>Recurrence Day of Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>