force-app/main/default/objects/Event__x/fields/Recurrence_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Pattern__c</fullName>
    <externalDeveloperName>recurrence2patterntext</externalDeveloperName>
    <label>Recurrence Pattern</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>