force-app/main/default/objects/Event__x/fields/Recurrence_Pattern_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Pattern_Start_Date__c</fullName>
    <externalDeveloperName>recurrence2patternstartdate</externalDeveloperName>
    <label>Recurrence Pattern Start Date</label>
    <type>DateTime</type>
</CustomField>