force-app/main/default/objects/Event__x/fields/Recurrence_Pattern_Time_Zone_Referenc__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Pattern_Time_Zone_Referenc__c</fullName>
    <externalDeveloperName>recurrence2patterntimezone</externalDeveloperName>
    <label>Recurrence Pattern Time Zone Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>