force-app/main/default/objects/Event__x/fields/Recurrence_Start__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Start__c</fullName>
    <externalDeveloperName>recurrencestartdatetime</externalDeveloperName>
    <label>Recurrence Start</label>
    <type>DateTime</type>
</CustomField>