force-app/main/default/objects/Event__x/fields/Recurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Type__c</fullName>
    <externalDeveloperName>recurrencetype</externalDeveloperName>
    <label>Recurrence Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>