force-app/main/default/objects/Event__x/fields/Related_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_To_ID__c</fullName>
    <externalDeveloperName>whatid</externalDeveloperName>
    <label>Related To ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>