force-app/main/default/objects/Event__x/fields/Reminder_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Date_Time__c</fullName>
    <externalDeveloperName>reminderdatetime</externalDeveloperName>
    <label>Reminder Date/Time</label>
    <type>DateTime</type>
</CustomField>