force-app/main/default/objects/Event__x/fields/Show_Time_As__c.field-meta.xml
<CustomField>
    <fullName>Show_Time_As__c</fullName>
    <externalDeveloperName>showas</externalDeveloperName>
    <label>Show Time As</label>
    <length>40</length>
    <type>Text</type>
</CustomField>