force-app/main/default/objects/Event__x/fields/sysmod_ts__c.field-meta.xml
<CustomField>
    <fullName>sysmod_ts__c</fullName>
    <externalDeveloperName>sysmod_ts</externalDeveloperName>
    <label>Sysmod_ts</label>
    <type>DateTime</type>
</CustomField>